--- a/.github/workflows/create-palettes.yml
+++ b/.github/workflows/create-palettes.yml
@@ -25,6 +25,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y doxygen xsltproc
           pip install BlockDAG
           pip install dlg_paletteGen
+          pip install dlg_paletteGen
 
       - name: Configure git
         run: |
