--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -58,7 +58,7 @@ jobs:
           pip install -r test-requirements.txt
           py.test --cov
 
-      - name: Run daliugen-engine tests
+      - name: Run daliuge-engine tests
         if: ${{ matrix.engine == 'yes' }}
         run: |
           COVFILES="$COVFILES daliuge-engine/.coverage"
