avahi host names and bash command line arguments.
Enabled dlg-trans.local and dg-engine.local as
host names through avahi zeroconf.

Enabled passing of command line argument values
through data drops for bash shell components.

--- a/daliuge-engine/dlg/passwd.template
+++ b/daliuge-engine/dlg/passwd.template
@@ -18,3 +18,4 @@ gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologi
 nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin
 _apt:x:100:65534::/nonexistent:/usr/sbin/nologin
 messagebus:x:101:102::/nonexistent:/usr/sbin/nologin
+avahi:x:102:103:Avahi mDNS daemon,,,:/var/run/avahi-daemon:/usr/sbin/nologin
