--- a/daliuge-translator/docker/Dockerfile.dev
+++ b/daliuge-translator/docker/Dockerfile.dev
@@ -12,6 +12,7 @@ LABEL build=$BUILD_ID
 #     apt-get clean && \
 #     apt install -y gcc python3-venv python3-distutils
 
+RUN service avahi-daemon stop && service dbus start && service avahi-daemon start && avahi-set-host-name dlg-engine
 COPY / /daliuge
 RUN . /dlg/bin/activate && \
     cd /daliuge && \
