--- a/daliuge-translator/docker/Dockerfile
+++ b/daliuge-translator/docker/Dockerfile
@@ -12,6 +12,10 @@ LABEL build=$BUILD_ID
 #     apt-get clean && \
 #     apt install -y gcc python3-venv python3-distutils
 
+RUN service avahi-daemon stop && \
+    service dbus start && \
+    service avahi-daemon start && \
+    avahi-set-host-name dlg-trans
 COPY / /daliuge
 
 RUN . /dlg/bin/activate && \
