--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,10 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
+
+  python:
+    install:
+      - requirements: docs/requirements.txt
     # You can also specify other tool versions:
     # nodejs: "20"
     # rust: "1.70"
