LIU-383: Transition to reporting pylint errors
Initial work to get our CI providing Error reports when running the pylint workflow.

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Run pylint
         run: |
-          pylint daliuge-common daliuge-translator daliuge-engine
+          pylint daliuge-common daliuge-translator daliuge-engine --fail-under=9 --fail-on=E                    
