--- a/daliuge-common/docker/Dockerfile.casa
+++ b/daliuge-common/docker/Dockerfile.casa
@@ -28,7 +28,7 @@ RUN apt install -y casacore-dev cmake g++ git libarrow-dev libplasma-dev python3
 RUN git clone https://gitlab.com/ska-telescope/cbf-sdp-emulator.git && \
     cd && python3 -m venv dlg && . ~/dlg/bin/activate && \
     pip3 install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-2.0.0.dev0-cp38-cp38-manylinux2014_x86_64.whl && \
-    pip install pyarrow==3.0.0 wheel python-casacore && \
+    pip install wheel python-casacore && \
     cd cbf-sdp-emulator; pip3 install --extra-index-url=https://nexus.engageska-portugal.pt/repository/pypi/simple .[plasma] && \
     cd data/; tar xf sim-vis.ms.tar.gz; cd ..
 
