LIU-406: Spell-check

--- a/.github/workflows/create-palettes.yml
+++ b/.github/workflows/create-palettes.yml
@@ -50,7 +50,7 @@ jobs:
           git clone https://$PALETTE_TOKEN@github.com/ICRAR/EAGLE-graph-repo
           mkdir -p EAGLE-graph-repo/$PROJECT_NAME
           mv $OUTPUT_FILENAME.palette EAGLE-graph-repo/$PROJECT_NAME/
-          mv $OUTPUT_FILENAME-template.palette EAGLE-raph-repo/$PROJECT_NAME/
+          mv $OUTPUT_FILENAME-template.palette EAGLE-graph-repo/$PROJECT_NAME/
           cd EAGLE-graph-repo
           git add *
           git diff-index --quiet HEAD || git commit -m "Automatically generated DALiuGE palette (branch $GITHUB_REF_NAME, commit $PROJECT_VERSION)"
