LIU-408: Add support for Python 3.11 and 3.12
- Add `setuptools` as a dependency: https://github.com/pypa/virtualenv/issues/2487
- Bump pyzmq version number: https://pyzmq.readthedocs.io/en/latest/changelog.html#id11
- Bump pydantic version number: https://github.com/pydantic/pydantic/issues/9637

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -21,7 +21,17 @@ jobs:
             translator: no
           - python-version: "3.10"
             test_number: 2
-            desc: "full package"
+            desc: "full package v3.10"
+            engine: yes
+            translator: yes
+          - python-version:  "3.11"
+            test_number: 3
+            desc: "full package v3.11"
+            engine: yes
+            translator: yes
+          - python-version:  "3.12"
+            test_number: 4
+            desc: "full package v3.12"
             engine: yes
             translator: yes
 
