LIU-420: Finalise prototype config behaviour
- Tests pass for config and slurm template
- Tested on Setonix

--- a/daliuge-engine/dlg/deploy/configs/setonix.ini
+++ b/daliuge-engine/dlg/deploy/configs/setonix.ini
@@ -1,11 +1,11 @@
+; This will be replaced by the above definition when processed
 [ENVIRONMENT]
+USER = rbunney
 ACCOUNT = pawsey0411
 LOGIN_NODE = setonix.pawsey.org.au
-DEFAULT_MON_HOST = dlg-mon.icrar.org
-DEFAULT_MON_PORT = 8898
-EXEC_PREFIX = srun -l
 HOME_DIR = /scratch/${ACCOUNT}
 DLG_ROOT = ${HOME_DIR}/${USER}/dlg
 LOG_DIR = ${DLG_ROOT}/log
-MODULES = ""
-VENV = f"source /software/projects/{ACCOUNT}/venv/bin/activate"
+MODULES = 
+VENV = source /software/projects/${ACCOUNT}/venv/bin/activate
+EXEC_PREFIX = srun -l
