--- a/daliuge-engine/docker/Dockerfile.dev
+++ b/daliuge-engine/docker/Dockerfile.dev
@@ -4,7 +4,11 @@ FROM icrar/daliuge-common:${VCS_TAG:-latest}
 
 # RUN sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata \
 #     gcc g++ gdb casacore-dev clang-tidy-10 clang-tidy libboost1.71-all-dev libgsl-dev
-RUN service dbus start && service avahi-daemon start && avahi-set-host-name dlg-engine
+RUN service avahi-daemon stop && \
+    service dbus start && \
+    service avahi-daemon start && \
+    avahi-set-host-name dlg-engine
+
 COPY / /daliuge
 RUN . /dlg/bin/activate && pip install --upgrade pip && pip install wheel && cd /daliuge && \
     pip install . 
