LIU-444: Revert all mpi4py import changes

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Install daliuge-engine
         if: ${{ matrix.engine == 'yes' }}
-        run: pip install -e "daliuge-engine/[test, MPI]"
+        run: pip install -e "daliuge-engine/[test]"
 
       - name: Run daliuge-translator tests
         if: ${{ matrix.translator == 'yes' }}
