--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -112,9 +112,9 @@ jobs:
         repository-url: https://test.pypi.org/legacy/
 
   publish-engine:
-    name: Publish daliuge-common
+    name: Publish daliuge-engine
     needs:
-    - build-common
+    - build-engine
     runs-on: ubuntu-latest
 
     environment:
@@ -129,7 +129,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: python-package-distributions
-        path: daliuge-common/dist/
+        path: daliuge-engine/dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
@@ -138,7 +138,7 @@ jobs:
   publish-translator:
     name: Publish daliuge-translator
     needs:
-    - build-common
+    - build-translator
     runs-on: ubuntu-latest
 
     environment:
@@ -153,7 +153,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: python-package-distributions
-        path: daliuge-common/dist/
+        path: daliuge-translator/dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
