--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -105,7 +105,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: daliuge-common-dist
-        path: daliuge-common/dist/
+        path: dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
@@ -129,7 +129,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: daliuge-engine-dist
-        path: daliuge-engine/dist/
+        path: dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
@@ -153,7 +153,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: daliuge-translator-dist
-        path: daliuge-translator/dist/
+        path: dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
