--- a/.github/workflows/docker_upload.yml
+++ b/.github/workflows/docker_upload.yml
@@ -10,7 +10,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Extract Git Tag
-        run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        run: |
+          VERSION=$(cat daliuge-common/VERSION)
+          echo "TAG=$VERSION" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -32,7 +34,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Extract Git Tag
-        run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        run: |
+          VERSION=$(cat daliuge-common/VERSION)
+          echo "TAG=$VERSION" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
