Add Slimtoolkit to docker build

--- a/.github/workflows/docker_upload.yml
+++ b/.github/workflows/docker_upload.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Extract Git Tag
         run: |
-          VERSION=$(cat daliuge-common/VERSION)
+          VERSION=$(cat daliuge-engine/VERSION)
           echo "TAG=$VERSION" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
@@ -44,8 +44,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push daliuge-engine
+      - name: Build engine
         working-directory: daliuge-engine
         run: |
           docker build --build-arg VCS_TAG=$TAG --no-cache -t icrar/daliuge-engine:$TAG -f docker/Dockerfile .
+          
+          curl -sL https://raw.githubusercontent.com/slimtoolkit/slim/master/scripts/install-slim.sh | sudo -E bash -
+          slim build --include-shell \
+            --include-path /etc --include-path /usr/local/lib --include-path /usr/local/bin --include-path /usr/lib/python3.8 \
+            --include-path /usr/lib/python3 --include-bin /usr/bin/hostname --include-path /dlg --include-path /daliuge \
+            --include-bin /usr/sbin/service --publish-exposed-ports=true \
+            --http-probe=false --tag=icrar/daliuge-engine.slim:${VCS_TAG}\
+            icrar/daliuge-engine.big:${VCS_TAG}
+          
           docker push icrar/daliuge-engine:$TAG
+          docker push icrar/daliuge-engine.slim:$TAG
+
