Fix incorrect reference

--- a/.github/workflows/docker_upload.yml
+++ b/.github/workflows/docker_upload.yml
@@ -54,8 +54,8 @@ jobs:
             --include-path /etc --include-path /usr/local/lib --include-path /usr/local/bin --include-path /usr/lib/python3.8 \
             --include-path /usr/lib/python3 --include-bin /usr/bin/hostname --include-path /dlg --include-path /daliuge \
             --include-bin /usr/sbin/service --publish-exposed-ports=true \
-            --http-probe=false --tag=icrar/daliuge-engine.slim:${VCS_TAG}\
-            icrar/daliuge-engine.big:${VCS_TAG}
+            --http-probe=false --tag=icrar/daliuge-engine.slim:$TAG \
+            icrar/daliuge-engine:TAG
           
           docker push icrar/daliuge-engine:$TAG
           docker push icrar/daliuge-engine.slim:$TAG
