Fix missing-$ error (stupid mistake)

--- a/.github/workflows/docker_upload.yml
+++ b/.github/workflows/docker_upload.yml
@@ -55,7 +55,7 @@ jobs:
             --include-path /usr/lib/python3 --include-bin /usr/bin/hostname --include-path /dlg --include-path /daliuge \
             --include-bin /usr/sbin/service --publish-exposed-ports=true \
             --http-probe=false --tag=icrar/daliuge-engine.slim:$TAG \
-            icrar/daliuge-engine:TAG
+            icrar/daliuge-engine:$TAG
           
           docker push icrar/daliuge-engine:$TAG
           docker push icrar/daliuge-engine.slim:$TAG
