--- a/.github/workflows/create-palettes.yml
+++ b/.github/workflows/create-palettes.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y doxygen xsltproc
           pip install BlockDAG
-          pip install dlg_paletteGen
+          pip install dlg-paletteGen
 
       - name: Configure git
         run: |
