--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,6 +1,12 @@
 name: Run unit tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master  #  Only run on pushes to master
+  pull_request:
+    types: [opened, synchronize, reopened]  # Run on PRs from any branch to any target
+
 
 jobs:
   run_tests:
@@ -87,7 +93,7 @@ jobs:
 
   finish:
     needs: run_tests
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Coveralls Finished
         uses: coverallsapp/github-action@master
