LIU-5: On run tests on push when pushing to master
This should result in less duplication in unittests.

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,6 +1,12 @@
 name: Run unit tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master  #  Only run on pushes to master
+  pull_request:
+    types: [opened, synchronize, reopened]  # Run on PRs from any branch to any target
+
 
 jobs:
   run_tests:
