--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,6 +1,11 @@
 name: Run pylint
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master  #  Only run on pushes to master
+  pull_request:
+    types: [opened, synchronize, reopened]  # Run on PRs from any branch to any target
 
 jobs:
 
