--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -131,7 +131,7 @@ jobs:
         run: coveralls --service=github
 
   finish:
-    needs: run_tests
+    needs: [run_translator, run_engine, run_end_to_end]
     runs-on: ubuntu-22.04
     steps:
       - name: Coveralls Finished
