--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -55,6 +55,12 @@ jobs:
           name: coverage-${{ github.job }}.${{ matrix.python-version }}
           path: daliuge-engine/.coverage.${{ matrix.python-version }}.${{ github.job }}
 
+      - name: Run upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ github.job }}.${{ matrix.subset }}
+          path: daliuge-engine/.coverage.${{ matrix.subset }}.${{ github.job }}
+
   run_end_to_end:
     name: Run end-to-end tests with python ${{matrix.python-version}}
     runs-on: ubuntu-22.04
